--- a/myblog/blog/templates/login.html
+++ b/myblog/blog/templates/login.html
@@ -12,7 +12,7 @@
 
 <div id="login" class="modal">
   
-  <form class="modal-content animate" action="">
+  <form class="modal-content animate" method ="post" action="">
     <div class="imgcontainer">
       <span onclick="document.getElementById('login').style.display='none'" class="close" title="Close Modal">&times;</span>
       <img src="https://static.runoob.com/images/mix/img_avatar.png" alt="Avatar" class="avatar">
@@ -20,10 +20,11 @@
 
     <div class="container">
       <p><label><b>用户名：</b></label></p>
-      <p>{{loginform.username}}</p>
+
+      <input type="text" placeholder="Enter Username" name="uname" required>
 
       <p><label><b>密码：</b></label></p>
-      <p>{{loginform.password}}</p>
+      <input type="password" placeholder="Enter Password" name="psw" required>
         
       <button type="submit">登录</button>
       <input type="checkbox" checked=""> 记住我
