--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -7,6 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
 		<link type='text/css' href="{% static 'css\slide_test.css' %}" rel='stylesheet' />
+		<link type='text/css' href='{% static "css/login.css" %}' rel='stylesheet' />
+		<link type='text/css' href='{% static "css/register.css" %}' rel='stylesheet' />
 		<script src="{% static 'js\jquery.min.js' %}"></script>
 		<script src="{% static 'js\skel.min.js' %}"></script>
 		<script src="{% static 'js\util.js' %}"></script>
@@ -27,8 +29,15 @@
 							<li><a href="#">电影</a></li>
 							<li><a href="#">读书</a></li>
 							<li><a href="#">杂记</a></li>
+							{%if request.user.is_authenticated%}
 							<li><a href="#">我的主页</a></li>
 							<li><a href="#">我的联系方式</a></li>
+							{%else%}
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							<li><a href="javascript:void(0)" onclick="document.getElementById('login').style.display='block'" style="width:auto;">登录</a></li>
+							<li><a href="#"  onclick="document.getElementById('register').style.display='block'"
+style ="width:auto;">注册</a></li>
+							{%endif%}
 						</ul>
 					</nav>
 					<nav class="main">
@@ -39,12 +48,15 @@
 									<input type="text" name="query" placeholder="Search" />
 								</form>
 							</li>
+							{%if request.user.is_authenticated%}
 							<li class="menu">
 								<a class="fa-bars" href="#menu">Menu</a>
 							</li>
+							{%endif%}
 						</ul>
 					</nav>
 				</header>
+			{%if request.user.is_authenticated%}
 			<!-- Menu -->
 				<section id="menu">
 
@@ -97,11 +109,16 @@
 					<!-- Actions -->
 						<section>
 							<ul class="actions vertical">
-								<li><a href="#" class="button big fit">退出登录</a></li>
+								<li><a href="/accounts/logout/" class="button big fit">退出登录</a></li>
 							</ul>
 						</section>
 				</section>
+			{%endif%}
 		</div>
+		{%if not request.user.is_authenticated%}
+		{%include 'login1.html'%}
+		{%include 'register.html'%}
+		{%endif%}
 {%block content%}{%endblock%}
 	</body>
 </html>
