--- a/myblog/blog/templates/write_post.html
+++ b/myblog/blog/templates/write_post.html
@@ -8,7 +8,8 @@
 			<div class="container">
 			  <p><label><b>选择博文的类型：</b></label>
 			  {{postform.type}}</p>
-
+			  <p><label><b>标题：</b></label>
+			  {{postform.title}}</p>
 			  <p><label><b>在此写入你想的内容：</b></label></p>
 			  <p>{{postform.body}}</p>
 		  </form>
