--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -2,7 +2,11 @@
 {% load staticfiles %}
 <html>
 	<head>
+		{%if title%}
+		<title>{{title}}</title>
+		{%else%}
 		<title>silyman的博客</title>
+		{%endif%}
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
@@ -19,7 +23,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="#">silyman的博客</a></h1>
+					<h1><a href={%url 'blog:index'%}>silyman的博客</a></h1>
 					<nav class="links">
 						<ul>
 							<li><a href={%url 'blog:index'%}>首页</a></li>
@@ -69,35 +73,33 @@
 						<section>
 							<ul class="links">
 								<li>
-									<a href={%url 'blog:blog_post' request.user.id %} style="font-size:30px;cursor:pointer" >
+									<a href={%url 'blog:blog_post' request.user.id %} style="font-size:20px;cursor:pointer" >
 										<h3>写博客</h3>
 									</a>
 								</li>
 								<li>
-									<a href="#">
+									<a href={%url 'blog:get_information' request.user.id%} style="font-size:20px;cursor:pointer">
 										<h3>我的资料</h3>
 									</a>
 								</li>
 								<li>
-									<a href="#">
+									<a href="#" style="font-size:20px;cursor:pointer">
 										<h3>关注</h3>
-										<p>Feugiat tempus veroeros dolor</p>
 									</a>
 								</li>
 								<li>
-									<a href="#">
+									<a href="#" style="font-size:20px;cursor:pointer">
 										<h3>粉丝</h3>
-										<p>Sed vitae justo condimentum</p>
 									</a>
 								</li>
 								<li>
-									<a href="#">
+									<a href="#" style="font-size:20px;cursor:pointer">
 										<h3>收藏</h3>
 										<p>Phasellus sed ultricies mi congue</p>
 									</a>
 								</li>
 								<li>
-									<a href="#">
+									<a href="#" style="font-size:20px;cursor:pointer">
 										<h3>我的图册</h3>
 										<p>Porta lectus amet ultricies</p>
 									</a>
@@ -107,7 +109,7 @@
 					<!-- Actions -->
 						<section>
 							<ul class="actions vertical">
-								<li><a href="/accounts/logout/" class="button big fit">退出登录</a></li>
+								<li><a href="/accounts/logout/" class="button big fit" style="font-size:15px;cursor:pointer">退出登录</a></li>
 							</ul>
 						</section>
 				</section>
