--- a/myblog/blog/templates/write_post.html
+++ b/myblog/blog/templates/write_post.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {%block content%}
 	<div id="post" class="postmodal">
-		  <form  method ="post" action="{%url 'blog:blog_post' request.user.id%}">
+		  <form name="form0" id="form0" method ="post" enctype="multipart/form-data" action="{%url 'blog:blog_post' request.user.id%}">
 		  {% csrf_token %}
 		  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" class="button big" value="发表"></p>
 			<div class="container">
@@ -10,8 +10,73 @@
 			  {{postform.type}}</p>
 			  <p><label><b>标题：</b></label>
 			  {{postform.title}}</p>
+			  <p><label><b>简介：</b></label>
+			  {{postform.brief}}</p>
+			  <p><label><b>请选择图片文件：JPG/GIF</b></label>
+			  <input type="file" name="picfile" id="file0" multiple="multiple" />
+			  <br />
+			  <br />
+			  <p><label>预览：</label></p>
+			<p id="img-append"></p>
+			<p id="img-append2"></p>
+			  <br />
+			  <br />
 			  <p><label><b>在此写入你想的内容：</b></label></p>
 			  <p>{{postform.body}}</p>
 		  </form>
 	</div>
+	<script>    
+$("#file0").change(function(){  
+  // getObjectURL是自定义的函数，见下面  
+  // this.files[0]代表的是选择的文件资源的第一个，因为上面写了 multiple="multiple" 就表示上传文件可能不止一个  
+  // ，但是这里只读取第一个   
+  if (this.files.length>6){
+  alert("最多只能上传6张图片！");
+  window.location.reload();
+  }
+  else{
+  var i = 0;
+  for(j = 0; j < this.files.length; j++) {
+  file = this.files[j];
+  if(file.type != "image/jpg" && file.type != "image/JPG" && file.type != "image/jpeg"&&file.type !="image/png"&&file.type !="image/gif"){ 
+            alert("图片类型必须是.gif,jpeg,jpg,png中的一种");
+			window.location.reload();
+            return;
+	}
+  var objUrl = getObjectURL(file) ;  
+  // 这句代码没什么作用，删掉也可以  
+  // console.log("objUrl = "+objUrl) ;  
+  if (objUrl) {  
+    // 在这里修改图片的地址属性  
+	var a = 'img'+ i;
+	if (j<3){
+	document.getElementById("img-append").innerHTML +=('<span><img src="" id=' + a + ' height="150" width="150"></span>&nbsp;&nbsp;&nbsp;');
+	}
+	else{
+	document.getElementById("img-append2").innerHTML +=('<span><img src="" id=' + a + ' height="150" width="150"></span>&nbsp;&nbsp;&nbsp;');
+	}
+	var b ='#'+a;
+    $(b).attr("src", objUrl) ;  
+	i +=1;
+  }  
+  }
+}
+}) ;  
+//建立一個可存取到該file的url  
+function getObjectURL(file) {  
+  var url = null ;   
+  // 下面函数执行的效果是一样的，只是需要针对不同的浏览器执行不同的 js 函数而已  
+  if (window.createObjectURL!=undefined) { // basic  
+    alert("1");
+	url = window.createObjectURL(file) ;  
+  } else if (window.URL!=undefined) { // mozilla(firefox)  
+	url = window.URL.createObjectURL(file) ;  
+  } else if (window.webkitURL!=undefined) { // webkit or chrome  
+    alert("3");
+	url = window.webkitURL.createObjectURL(file) ;  
+  }  
+  return url ;  
+}  
+</script>  
 {%endblock%}
+<script>    
