--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -83,24 +83,24 @@
 									</a>
 								</li>
 								<li>
-									<a href="#" style="font-size:20px;cursor:pointer">
+									<a href={%url 'blog:myfollowing' request.user.id%} style="font-size:20px;cursor:pointer">
 										<h3>关注</h3>
 									</a>
 								</li>
 								<li>
-									<a href="#" style="font-size:20px;cursor:pointer">
+									<a href={%url 'blog:myfollowers' request.user.id%} style="font-size:20px;cursor:pointer">
 										<h3>粉丝</h3>
 									</a>
 								</li>
 								<li>
-									<a href="#" style="font-size:20px;cursor:pointer">
+									<a href={%url 'blog:collections' request.user.id %} style="font-size:20px;cursor:pointer">
 										<h3>收藏</h3>
 										<p>Phasellus sed ultricies mi congue</p>
 									</a>
 								</li>
 								<li>
 									<a href="#" style="font-size:20px;cursor:pointer">
-										<h3>我的图册</h3>
+										<h3>喜欢</h3>
 										<p>Porta lectus amet ultricies</p>
 									</a>
 								</li>
