--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -46,8 +46,8 @@
 						<ul>
 							<li class="search">
 								<a class="fa-search" href="#search">Search</a>
-								<form id="search" method="get" action="#">
-									<input type="text" name="query" placeholder="Search" />
+								<form id="search" method="get" action="/search/">
+									<input type="text" name="q" placeholder="Search" />
 								</form>
 							</li>
 							{%if request.user.is_authenticated%}
@@ -64,8 +64,8 @@
 
 					<!-- Search -->
 						<section>
-							<form class="search" method="get" action="#">
-								<input type="text" name="query" placeholder="Search" />
+							<form class="search" method="get" action="/search/">
+								<input type="text" name="q" placeholder="Search" />
 							</form>
 						</section>
 
@@ -99,7 +99,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="#" style="font-size:20px;cursor:pointer">
+									<a href={%url 'blog:hearts' request.user.id %} style="font-size:20px;cursor:pointer">
 										<h3>喜欢</h3>
 										<p>Porta lectus amet ultricies</p>
 									</a>
