--- a/myblog/blog/templates/index.html
+++ b/myblog/blog/templates/index.html
@@ -5,6 +5,7 @@
 <!--幻灯片-->
 <div class ="slide-container">
 	<div class="stopslide" onclick="stopSlides(t)"><a href="javascript:void(0)" id="flag">stop</a></div>
+	{%if not slide_list%}
 	<div class="slideshow fade" id ='sf'>
 		<div class="number-show">1/4</div>
 		<img src="{% static 'images\1.jpg' %}" width="100%" height="170">
@@ -25,6 +26,18 @@
 		<img src="{% static 'images\4.jpg' %}" width="100%" height="170">
 		<div class="article-detail">gggggg</div>
 	</div>
+	{%else%}
+	{%for slide_item in slide_list%}
+	<div class="slideshow fade" id ='sf'>
+		<div>
+		<a href={%url 'blog:post_detail' slide_item.article.id%}>
+		<img src='/static/images/{{slide_item.image_url}}' width="100%" height="340">
+		<div class="article-detail">{{slide_item.article.title}}</div>
+		</a>
+		</div>
+	</div>
+	{%endfor%}
+	{%endif%}
 </div>
 <br>
 
@@ -42,4 +55,5 @@
 </div>
 
 {%include 'pagination.html' %}
+{%include 'intro.html' %}
 {%endblock%}
