--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -83,6 +83,11 @@
 									</a>
 								</li>
 								<li>
+									<a href={%url 'blog:get_information' request.user.id%} style="font-size:20px;cursor:pointer">
+										<h3>我的消息</h3>
+									</a>
+								</li>
+								<li>
 									<a href={%url 'blog:myfollowing' request.user.id%} style="font-size:20px;cursor:pointer">
 										<h3>关注</h3>
 									</a>
