--- a/myblog/blog/templates/post.html
+++ b/myblog/blog/templates/post.html
@@ -3,7 +3,7 @@
 		<header>
 			<div class="title">
 				<h2><a href="#">{{article.title}}</a></h2>
-				<p>{{article.brief}}</p>
+				<p class="bb">{{article.brief}}</p>
 			</div>
 			<div class="meta">
 				<time class="published" >{{article.post_time}}</time>
