--- a/myblog/blog/templates/post.html
+++ b/myblog/blog/templates/post.html
@@ -2,7 +2,7 @@
 	<article class="post">
 		<header>
 			<div class="title">
-				<h2><a href="#">{{article.title}}</a></h2>
+				<h2 class="dd"><a href="#">{{article.title}}</a></h2>
 				<p class="bb">{{article.brief}}</p>
 			</div>
 			<div class="meta">
