--- a/myblog/blog/templates/my_message.html
+++ b/myblog/blog/templates/my_message.html
@@ -3,10 +3,15 @@
 
 {%block content%}
 {%if message_list%}
-<h1>私信：</h1>
+<h1>私信({{u_count.unread_count}}条未读)：</h1>
 <div class ="message-container">
 {%for message in message_list%}
 <article class="post">
+	{%if message.has_readed == True%}
+	<p style="text-align: right">已读</p>
+	{%else%}
+	<p style="text-align: right"><a href ={%url 'blog:message_read' message.id%} >标记为已读</a></p>
+	{%endif%}
 <footer>
   <span>
     <a href={%url 'blog:get_information' message.sender.id %} class="sender">
@@ -15,8 +20,8 @@
 	</span>
 	</a>
 	<span class="dd">
-	<span>{{message.sender.username}}</span>
-	<span>:&nbsp;&nbsp;&nbsp;<a href={%url 'blog:get_information' message.sender.id %} >{{message.content}}</a></span>
+	<span><a href={%url 'blog:get_information' message.sender.id %} class="sender">{{message.sender.username}}</a></span>
+	<span>:&nbsp;&nbsp;&nbsp;<a href={%url 'blog:message_detail' message.id %} >{{message.content}}</a></span>
 	</span>
   </span>
 </footer>
