add message notice

--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -87,7 +87,7 @@
 									{%if u_count%}
 										<h3>我的消息({{u_count.total_count}})&nbsp;&lt;未读消息({{u_count.unread_count}})&gt;</h3>
 									{%else%}
-									<h3>我的消息</h3>
+									<h3>我的消息(0)&nbsp;&lt;未读消息(0)&gt;</h3>
 									{%endif%}
 									</a>
 								</li>
